// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography  1`] = `
.emotion-0 {
  color: #3c3c3c;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<span
  className="emotion-0"
>
  Default should render nicely.
</span>
`;

exports[`Typography  2`] = `
.emotion-0 {
  color: #3c3c3c;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: bold;
  line-height: 1.3;
  margin: 0;
  text-align: center;
}

<span
  className="emotion-0"
>
  body variant should render nicely with align center and fontWeight bold.
</span>
`;

exports[`Typography  3`] = `
.emotion-0 {
  color: #3c3c3c;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<span
  className="emotion-0"
>
  body variant should render nicely.
</span>
`;

exports[`Typography  4`] = `
.emotion-0 {
  color: #3c3c3c;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 12px;
  font-weight: 400;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<span
  className="emotion-0"
>
  caption variant should render nicely.
</span>
`;

exports[`Typography  5`] = `
.emotion-0 {
  color: #3c3c3c;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.5;
  margin: 0;
  text-align: initial;
}

<span
  className="emotion-0"
>
  h1 variant should render nicely.
</span>
`;

exports[`Typography  6`] = `
.emotion-0 {
  color: #3c3c3c;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 24px;
  font-weight: 400;
  line-height: 1.3;
  margin: 0;
  text-align: initial;
}

<span
  className="emotion-0"
>
  h2 variant should render nicely.
</span>
`;

exports[`Typography  7`] = `
.emotion-0 {
  color: #3c3c3c;
  display: inline-block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1.4;
  margin: 0;
  text-align: initial;
}

<span
  className="emotion-0"
>
  h3 variant should render nicely.
</span>
`;
